--- a/css/input.css
+++ b/css/input.css
@@ -13,7 +13,6 @@
   h4,
   h5 {
     @apply font-bold;
-    @apply mb-4;
   }
 
   h1 {
@@ -30,8 +29,8 @@
     @apply rounded border border-neutral-300 bg-neutral-50 p-1;
   }
 
-  button {
-    @apply rounded border border-neutral-400 px-3 py-1;
+  .btn {
+    @apply rounded border border-neutral-400 bg-white px-3 py-1;
     @apply hover:bg-neutral-50 active:bg-neutral-200;
     @apply focus-visible:outline-none focus-visible:ring-2;
     @apply transition-shadow;
@@ -46,5 +45,28 @@
   input[type='number']::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
+  }
+
+  /* Animations and such */
+  .shake {
+    animation: horizontal-shaking 0.25s;
+  }
+
+  @keyframes horizontal-shaking {
+    0% {
+      transform: translateX(0);
+    }
+    25% {
+      transform: translateX(5px);
+    }
+    50% {
+      transform: translateX(-5px);
+    }
+    75% {
+      transform: translateX(5px);
+    }
+    100% {
+      transform: translateX(0);
+    }
   }
 }
