--- a/css/input.css
+++ b/css/input.css
@@ -27,6 +27,7 @@
   a {
     @apply text-blue-600 hover:underline;
   }
+  pre,
   code {
     @apply rounded bg-neutral-100 px-2 py-1 text-sm;
   }
